--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <div class ="carousel">
         
         <div class ="carousel-item-visible carousel-item">
-            <img src="images/1.jpg">
+            <img src="./images/1.png">
         </div>
         <div class ="carousel-item">
-            <img src="images/2.jpg">
+            <img src="./images/2.jpeg">
         </div>
         <div class ="carousel-item">
-            <img src="images/3.jpg">
+            <img src="images/3.jpeg">
         </div>
         <div class="carousel-actions">
             <button id="carousel-button-prev" aria-label="Previous Slide"><</button>
